tile fix, left align site

--- a/src/components/Tile/tile.scss
+++ b/src/components/Tile/tile.scss
@@ -253,12 +253,11 @@ a.bx--tile--clickable--dark .tile__link-icon svg {
   width: 50%;
 
   @include breakpoint('md') {
-    right: 1rem;
-    width: calc(50% - 1rem);
+    width: 50%;
   }
 
   @include breakpoint('lg') {
-    width: calc(25% - 1rem);
+    width: 25%;
   }
 }
 
