--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -15,6 +15,8 @@ body {
 
 .container .ibm--grid {
   max-width: rem(1584px);
+  margin-left: 0;
+  margin-right: 0;
 }
 .background--inverse a.bx--link {
   color: $ibm-colors__blue--40;
